crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_hybrid_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(response)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "multi_column_hybrid_search",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 2
      },
      "_score": "0.01"
    },
    {
      "dataset": "multi_column_hybrid_search",
      "matches": {
        "cp_department": [
          "DEPARTMENT"
        ],
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends con"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      },
      "_score": "0.03"
    }
  ]
}
