crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_keywords_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.01",
      "dataset": "qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": "0.01",
      "dataset": "qs",
      "matches": {
        "answer": [
          "times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": "0.01",
      "dataset": "qs",
      "matches": {
        "question": [
          "There are 22 female students and 18 male students in a classroom. Find the total number \\( t \\) of students."
        ]
      },
      "primary_key": {
        "id": 787
      }
    },
    {
      "_score": "0.01",
      "dataset": "qs",
      "matches": {
        "answer": [
          "divisors other than 1 and itself (e.g., 2, 3, 4, 6, 9, 12, 18)."
        ]
      },
      "primary_key": {
        "id": 484
      }
    }
  ]
}
