crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_no_pks_basic_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: err.to_string()
---
HTTP error: 500 Internal Server Error - Data sources [spice.public.mulit_column_no_pks] do not exist
