crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_question_vector_search_sql_filters.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 938,
    "answer": "The presence of fibrinolysin in the reagents can partially or totally dissolve the clot, leading to erroneous results.",
    "_score": "0.66"
  },
  {
    "id": 1279,
    "answer": "$\\boxed{\\text{Pyruvate}}$ is not an intermediate of the TCA cycle. It is converted to acetyl-CoA, which then enters the cycle.",
    "_score": "0.66"
  },
  {
    "id": 1289,
    "answer": "$\\boxed{\\text{(a) pressure}}$ (Intensive properties, like pressure, do not depend on the size or mass of the system.)",
    "_score": "0.65"
  },
  {
    "id": 446,
    "answer": "Infection is acquired by ingestion of the spores, which transmit the sporoplasm through the tubules into enterocytes.",
    "_score": "0.64"
  }
]
