crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_view_answer_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
  "results": [
    {
      "_score": "0.01",
      "data": {
        "question": "How many multiples of 4 are there between 1 and 30? List them and count the total."
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ]
      },
      "primary_key": {
        "id": 468
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
        ]
      },
      "primary_key": {
        "id": 361
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "qs",
      "matches": {
        "question": [
          "How many groups of 2 are in 14?"
        ]
      },
      "primary_key": {
        "id": 462
      }
    },
    {
      "_score": "0.01",
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
