crates/runtime/tests/models/snapshots/integration_models__models__search__multi_column_view_answer_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "[score]",
      "dataset": "qs",
      "matches": {
        "answer": [
          "a) $-|-9| = -9$  \nb) $-(-9) = 9$  \nc) $2-(-6) = 2 + 6 = 8$  \nd) $2-|-6| = 2 - 6 = -4$"
        ]
      },
      "primary_key": {
        "id": 708
      }
    },
    {
      "_score": "[score]",
      "dataset": "qs",
      "matches": {
        "question": [
          "\\((-6) \\div (-2)\\)"
        ]
      },
      "primary_key": {
        "id": 1324
      }
    },
    {
      "_score": "[score]",
      "dataset": "qs",
      "matches": {
        "answer": [
          "a. \\( h(7) = -3(7) - 4 = -21 - 4 = \\boxed{-25} \\)\nb. \\( h(-4) = -3(-4) - 4 = 12 - 4 = \\boxed{8} \\)"
        ]
      },
      "primary_key": {
        "id": 255
      }
    },
    {
      "_score": "[score]",
      "dataset": "qs",
      "matches": {
        "question": [
          "Yasenia is 3 years older than Xavier. How old is Yasenia when Xavier is 18 years old?"
        ]
      },
      "primary_key": {
        "id": 1323
      }
    }
  ]
}
